Added caching on production, font preloading, own a cattery section, sitemaps

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -279,6 +279,14 @@ en:
     find_your_cat: "Find your cat"
     popular_breeds: "Popular breeds"
     new_kittens: "New kittens"
+    own_a_cattery: "Own a cattery"
+    strong_online_presence: "Give your cattery a strong online presence"
+    one_place: "With Cat Linker you can add information from your parent cats, litters and kittens all in one place."
+    detailed_overview: "Immediately give interested cat adopters valuable information while being able to keep a detailed overview of all your cats without any extra effort."
+    focus_on_what_is_important: "Thanks to this you can focus on what is the most important: spending time with your cats."
+    discover_more: "Discover more"
+    already_convinced: "Already convinced"
+    sign_up_now: "Sign up now"
   index:
     no_pairs_found: "No pairs found"
     no_litters_found: "No litters found"
