Fixes for responsive layout

--- a/config/locales/coat.en.yml
+++ b/config/locales/coat.en.yml
@@ -16,3 +16,4 @@ en:
     tortoiseshell: "tortoiseshell"
     tri_color_calico: "tri color / calico"
     colour_point: "colourpoint"
+    smoke: "smoke"
