--- a/config/locales/coat.nl.yml
+++ b/config/locales/coat.nl.yml
@@ -16,3 +16,4 @@ nl:
     tortoiseshell: "tortoiseshell"
     tri_color_calico: "tri-colour / calico"
     colour_point: "colourpoint"
+    smoke: "smoke"
