--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,6 +62,8 @@ en:
   buttons:
     search: "Search"
     see_all_kittens: "See all kittens"
+    see_more: "See more"
+    see_more_from_this_cattery: "See more from this cattery"
     create: "Create"
     update: "Update"
     delete: "Delete"
@@ -100,6 +102,7 @@ en:
     gender: "Gender"
     cattery: "Cattery"
     location: "Location"
+    region: "Region"
     birth_date: "Birth date"
     color: "Color"
     dominant_color: "(Dominant) color"
@@ -133,6 +136,8 @@ en:
       pkd_echo: "PKD with echocardiographic test"
       fiv: "FIV"
       felv: "FeLV"
+      pl: "PL"
+      sma: "SMA"
   cattery_info:
     cattery_info: "Cattery info"
     certification_number: "Cert. nr"
