--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -62,6 +62,8 @@ nl:
   buttons:
     search: "Zoek"
     see_all_kittens: "Bekijk alle kittens"
+    see_more: "Bekijk meer"
+    see_more_from_this_cattery: "Bekijk meer van deze cattery"
     create: "Voeg toe"
     update: "Update"
     delete: "Verwijder"
@@ -101,6 +103,7 @@ nl:
     gender: "Geslacht"
     cattery: "Cattery"
     location: "Locatie"
+    region: "Regio"
     birth_date: "Geboren"
     color: "Kleur"
     dominant_color: "(Dominante) kleur"
@@ -133,6 +136,8 @@ nl:
       pkd_echo: "PKD met echografische test"
       fiv: "FIV"
       felv: "FeLV"
+      pl: "PL"
+      sma: "SMA"
   cattery_info:
     cattery_info: "Cattery info"
     certification_number: "Erkenningsnr"
