--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,6 +62,7 @@ en:
   buttons:
     search: "Search"
     see_all_kittens: "See all kittens"
+    see_all_breeds: "See all breeds"
     see_more: "See more"
     see_more_from_this_cattery: "See more from this cattery"
     create: "Create"
@@ -102,7 +103,7 @@ en:
     gender: "Gender"
     cattery: "Cattery"
     location: "Location"
-    region: "Region"
+    region: "Area"
     birth_date: "Birth date"
     color: "Color"
     dominant_color: "(Dominant) color"
@@ -307,6 +308,7 @@ en:
     discover_more: "Discover more"
     already_convinced: "Already convinced"
   index:
+    available_kittens: "Available kittens"
     no_pairs_found: "No pairs found"
     no_litters_found: "No litters found"
     no_kittens_found: "No kittens found"
