--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -62,6 +62,7 @@ nl:
   buttons:
     search: "Zoek"
     see_all_kittens: "Bekijk alle kittens"
+    see_all_breeds: "Bekijk alle rassen"
     see_more: "Bekijk meer"
     see_more_from_this_cattery: "Bekijk meer van deze cattery"
     create: "Voeg toe"
@@ -307,6 +308,7 @@ nl:
     focus_on_what_is_important: "Wij zorgen ervoor dat jij je kan focussen op wat het belangrijkste is: tijd doorbrengen met je katten."
     already_convinced: "Al overtuigd"
   index:
+    available_kittens: "Beschikbare kittens"
     no_pairs_found: "Geen koppels gevonden"
     no_litters_found: "Geen nestjes gevonden"
     no_kittens_found: "Geen kittens gevonden"
