Add help index and What is Cat Linker guide

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -304,7 +304,7 @@ nl:
     own_a_cattery: "Heb je een cattery"
     strong_online_presence: "Geef je cattery een sterke plaats online"
     one_place: "Met Cat Linker kan je alle informatie over je katers, poezen, nestjes en kittens op één handige plaats gaan bijhouden."
-    detailed_overview: "Geef aan potentiële adopteerders meteen belangrijke informatie mee terwijl je zonder extra moeite een gedetailleerd overzicht van al je katten bijhoudt."
+    detailed_overview: "Geef aan geïnteresseerde kattenliefhebbers meteen belangrijke informatie mee terwijl je zonder extra moeite een gedetailleerd overzicht van al je katten bijhoudt."
     focus_on_what_is_important: "Wij zorgen ervoor dat jij je kan focussen op wat het belangrijkste is: tijd doorbrengen met je katten."
     already_convinced: "Al overtuigd"
   index:
