--- a/config/locales/help.en.yml
+++ b/config/locales/help.en.yml
@@ -6,13 +6,21 @@ en:
     what_is_catlinker_page:
       platform: "The platform for your cattery"
       summary: "Efficiently keep track of all your cats and kittens.<br>Inform interested cat adopters with ease." 
-      advantages: "Advantages"
+      features: "Features"
+      feature:
+        personal_page: "Personal page for your cattery"
+        add_parents: "Add all your parent cats"
+        add_kittens: "Add all your litters and kittens"
+        easy_tracking: "Easy tracking of all the litters and kittens per parent"
+        social_media: "Social media sharing for your cattery and kitten pages"
+        responsive: "Pages optimized for all screen sizes (smartphone, tablet, desktop)"
+      extras: "A few extras"
       user_friendly: "User-friendly"
       user_friendly_text: "The entire platform was built with user-friendliness as a top priority. Get all the benefits from having your own website, but get results faster without having to worry about all the technical stuff."
       easy_to_find: "Easy to find"
-      easy_to_find_text: "The pages for your cattery and kittens are fully optimized to be found easily in search engines (Google, Bing, …). By the way, it's also very easy for visitors to share your pages through social media."
+      easy_to_find_text: "The pages for your cattery and kittens are fully optimized to be found easily in search engines (Google, Bing, …). On top of that, it's also very easy for visitors to share your pages through social media."
       multi_lingual: "Efficiently multi-lingual"
-      multi_lingual_text: "Never add the same information twice and once you’ve added it the content is immediately available in multiple languages. This way the whole world can immediately enjoy looking at your beatiful cats!"
+      multi_lingual_text: "Never add the same information twice and once you’ve added it the content is immediately available in multiple languages. So the whole world can also enjoy looking at your beatiful cats!"
       completely_free: "and get all of this completely FREE"
       ready_to_join: "Ready to join"
       
