replace strftime js lib, add new colors and coat patterns

--- a/config/locales/coat.en.yml
+++ b/config/locales/coat.en.yml
@@ -2,7 +2,6 @@ en:
   colors:
     black: "black"
     blue: "blue"
-    brown: "brown"
     cinnamon: "cinnamon"
     cream: "cream"
     fawn: "fawn"
@@ -10,12 +9,16 @@ en:
     red_ginger: "red (ginger)"
     white: "white"
     silver: "silver"
+    lilac: "lilac"
+    seal: "seal"
+    chocolate: "chocolate"
   coats:
     solid: "solid"
     bi_colour: "bi-color"
     tabby: "tabby"
-    tortoiseshell: "tortoiseshell"
+    tortoiseshell: "tortie"
     tri_color_calico: "tri color / calico"
     colour_point: "colourpoint"
     smoke: "smoke"
     spotted: "rosetted / spotted"
+    mitted: "mitted"
