--- a/config/locales/coat.nl.yml
+++ b/config/locales/coat.nl.yml
@@ -2,7 +2,6 @@ nl:
   colors:
     black: "zwart"
     blue: "blauw"
-    brown: "bruin"
     cinnamon: "cinnamon"
     cream: "crème"
     fawn: "fawn (beige / zandkleur)"
@@ -10,12 +9,16 @@ nl:
     red_ginger: "rood"
     white: "wit"
     silver: "zilver"
+    lilac: "lilac"
+    seal: "seal"
+    chocolate: "chocolate"
   coats:
     solid: "effen"
     bi_colour: "bi-colour"
     tabby: "tabby"
-    tortoiseshell: "tortoiseshell"
+    tortoiseshell: "tortie"
     tri_color_calico: "tri-colour / calico"
     colour_point: "colourpoint"
     smoke: "smoke"
     spotted: "rosetted / spotted"
+    mitted: "mitted"
