Add availability to kittens on landing page

--- a/config/locales/help.en.yml
+++ b/config/locales/help.en.yml
@@ -11,8 +11,8 @@ en:
         personal_page: "Personal page for your cattery"
         add_parents: "Add all your parent cats"
         add_kittens: "Add all your litters and kittens"
-        easy_tracking: "Easy tracking of all the litters and kittens per parent"
-        social_media: "Social media sharing for your cattery and kitten pages"
+        easy_tracking: "Tracking of all the litters and kittens per parent"
+        social_media: "Easy social media sharing for your cattery and kitten pages"
         responsive: "Pages optimized for all screen sizes (smartphone, tablet, desktop)"
       extras: "A few extras"
       user_friendly: "User-friendly"
