--- a/config/locales/help.nl.yml
+++ b/config/locales/help.nl.yml
@@ -11,8 +11,8 @@ nl:
         personal_page: "Persoonlijke pagina voor je cattery"
         add_parents: "Voeg al je katers en poezen toe"
         add_kittens: "Voeg al je nestjes en kittens toe"
-        easy_tracking: "Volg gemakkelijk alle nestjes en kittens op per ouder (kater/poes)"
-        social_media: "Delen op sociale media van je cattery en kitten pagina's"
+        easy_tracking: "Volg alle nestjes en kittens op per ouder (kater/poes)"
+        social_media: "Gemakkelijk delen op sociale media van je cattery en kitten pagina's"
         responsive: "De pagina's zijn geoptimaliseerd voor alle schermgroottes (smartphone, tablet, desktop)"
       extras: "Enkele extra's"
       user_friendly: "Gebruiksvriendelijk"
