--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -222,6 +222,12 @@ en:
       pair_has_two_different_breeds: "You can't make a pair with two different breeds"
       parent_breed_is_different_than_kitten_breed: "The kitten must have the same breed as the parents"
       parents_dont_own_selected_litter: "The selected parents are not the parents from the selected litter"
+    dropzone:
+      drag_or_click_singular: "Drag or click here to upload"
+      drag_or_click_plural: "Drag or click here to upload"
+      allowed_file_type: "Only images are allowed."
+      allowed_file_size: "Maximum 2 MB per file."
+  
 
   social:
     share_this_kitten: "Share this kitten"
@@ -243,6 +249,8 @@ en:
     edit: "Edit %{kind}"
     required: "required"
     tests: "Tests"
+    main_picture: "Main picture"
+    other_pictures: "Additional pictures"
 
   # pluralization
   cattery:
