--- a/config/locales/help.en.yml
+++ b/config/locales/help.en.yml
@@ -20,7 +20,7 @@ en:
       easy_to_find: "Easy to find"
       easy_to_find_text: "The pages for your cattery and kittens are fully optimized to be found easily in search engines (Google, Bing, …). On top of that, it's also very easy for visitors to share your pages through social media."
       multi_lingual: "Efficiently multi-lingual"
-      multi_lingual_text: "Never add the same information twice and once you’ve added it the content is immediately available in multiple languages. So the whole world can also enjoy looking at your beatiful cats!"
+      multi_lingual_text: "Never add the same information twice and once you’ve added it the content is immediately available in multiple languages. So the whole world can also enjoy looking at your adorable cats!"
       completely_free: "and get all of this completely FREE"
       ready_to_join: "Ready to join"
       
