Increase max file size for images to 5MB, fix no pairs added yet EN translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -124,6 +124,7 @@ en:
     litters: "Litters"
     litter_nr: "Litter nr"
     kitten_specific: "Kitten specific"
+    pairs: "Pairs"
     father: "Father"
     mother: "Mother"
     tests:
