Fix EN translation for litter

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -250,7 +250,7 @@ en:
     tests: "Tests"
     main_picture: "Main picture"
     other_pictures: "Additional pictures"
-    litter: "nestje"
+    litter: "litter"
 
   # pluralization
   cattery:
